# creator

./: .gitignore  README.md
.github/workflows/: integration.yml  publish-smoke-only.yml  set-branch-protection.yml
backend/: Dockerfile  README.md  README_YOUTUBE.md  ai_client.py  app.py  models.py  pyproject.toml  requirements.txt  scheduler.py  scheduler_healthcheck.py  tmp_insert_audit.py  token_refresher.py  worker.py  worker_tasks.py
backend/adapters/: base.py  instagram_adapter.py  tiktok_adapter.py  twitter_adapter.py  youtube_adapter.py
backend/scripts/: MIGRATION_README.md  cleanup_migration_backups.py  list_migration_audits.py  migrate_encrypt_tokens.py
backend/services/: content_service.py
backend/tests/: test_admin_audit_integration.py  test_analytics_service_mocked.py  test_cleanup_temp_uploads.py  test_health.py  test_publish_integration.py  test_publish_validation.py  test_scheduler_integration.py
docs/: API.md  ARCHITECTURE.md  SCALING.md
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json
frontend/.nuxt/: nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
frontend/.nuxt/dev/: index.mjs  index.mjs.map
frontend/.nuxt/manifest/: latest.json
frontend/.nuxt/manifest/meta/: dev.json
frontend/.nuxt/types/: build.d.ts  imports.d.ts
frontend/pages/: generate.vue  index.vue
infra/: docker-compose.yml  encryption_key
scripts/: setup_dev.ps1
